--- a/index.html
+++ b/index.html
@@ -4,8 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
+    <!-- CSS Style Link -->
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <section class="memory-game">
+        <div class="memory-card">
+            <img src="./img/cover-img.png" alt="cover" class="front-face">
+            <img src="./img/kitty1.png" alt="" class="back-face">
+        </div>
+        <div class="memory-card">
+            <img src="./img/cover-img.png" alt="" class="front-face">
+            <img src="./img/kitty1.png" alt="" class="back-face">
+        </div>
+        <div class="memory-card">
+            <img src="./img/cover-img.png" alt="" class="front-face">
+            <img src="./img/kitty2.png" alt="" class="back-face">
+        </div>
+        <div class="memory-card">
+            <img src="./img/cover-img.png" alt="" class="front-face">
+            <img src="./img/kitty2.png" alt="" class="back-face">
+        </div>
+        <div class="memory-card">
+            <img src="./img/cover-img.png" alt="" class="front-face">
+            <img src="./img/kitty3.png" alt="" class="back-face">
+        </div>
+        <div class="memory-card">
+            <img src="./img/cover-img.png" alt="" class="front-face">
+            <img src="./img/kitty3.png" alt="" class="back-face">
+        </div>
+        <div class="memory-card">
+            <img src="./img/cover-img.png" alt="" class="front-face">
+            <img src="./img/kitty4.png" alt="" class="back-face">
+        </div>
+        <div class="memory-card">
+            <img src="./img/cover-img.png" alt="" class="front-face">
+            <img src="./img/kitty4.png" alt="" class="back-face">
+        </div>
+        <div class="memory-card">
+            <img src="./img/cover-img.png" alt="" class="front-face">
+            <img src="./img/kitty5.png" alt="" class="back-face">
+        </div>
+        <div class="memory-card">
+            <img src="./img/cover-img.png" alt="" class="front-face">
+            <img src="./img/kitty5.png" alt="" class="back-face">
+        </div>
+        <div class="memory-card">
+            <img src="./img/cover-img.png" alt="" class="front-face">
+            <img src="./img/kitty6.png" alt="" class="back-face">
+        </div>
+        <div class="memory-card">
+            <img src="./img/cover-img.png" alt="" class="front-face">
+            <img src="./img/kitty6.png" alt="" class="back-face">
+        </div>
+    </section>
+    <!-- Script Link-->
+    <script src="./script.js"></script>
 </body>
 </html>
