implemented flip card rotate functionality in 3D to display

--- a/index.html
+++ b/index.html
@@ -10,52 +10,52 @@
 <body>
     <section class="memory-game">
         <div class="memory-card">
-            <img src="./img/cover-img.png" alt="cover" class="front-face">
-            <img src="./img/kitty1.png" alt="" class="back-face">
+            <img src="./img/kitty1.png" alt="" class="front-face">
+            <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
         <div class="memory-card">
-            <img src="./img/cover-img.png" alt="" class="front-face">
-            <img src="./img/kitty1.png" alt="" class="back-face">
+            <img src="./img/kitty1.png" alt="" class="front-face">
+            <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
         <div class="memory-card">
-            <img src="./img/cover-img.png" alt="" class="front-face">
-            <img src="./img/kitty2.png" alt="" class="back-face">
+            <img src="./img/kitty2.png" alt="" class="front-face">
+            <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
         <div class="memory-card">
-            <img src="./img/cover-img.png" alt="" class="front-face">
-            <img src="./img/kitty2.png" alt="" class="back-face">
+            <img src="./img/kitty2.png" alt="" class="front-face">
+            <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
         <div class="memory-card">
-            <img src="./img/cover-img.png" alt="" class="front-face">
-            <img src="./img/kitty3.png" alt="" class="back-face">
+            <img src="./img/kitty3.png" alt="" class="front-face">
+            <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
         <div class="memory-card">
-            <img src="./img/cover-img.png" alt="" class="front-face">
-            <img src="./img/kitty3.png" alt="" class="back-face">
+            <img src="./img/kitty3.png" alt="" class="front-face">
+            <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
         <div class="memory-card">
-            <img src="./img/cover-img.png" alt="" class="front-face">
-            <img src="./img/kitty4.png" alt="" class="back-face">
+            <img src="./img/kitty4.png" alt="" class="front-face">
+            <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
         <div class="memory-card">
-            <img src="./img/cover-img.png" alt="" class="front-face">
-            <img src="./img/kitty4.png" alt="" class="back-face">
+            <img src="./img/kitty4.png" alt="" class="front-face">
+            <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
         <div class="memory-card">
-            <img src="./img/cover-img.png" alt="" class="front-face">
-            <img src="./img/kitty5.png" alt="" class="back-face">
+            <img src="./img/kitty5.png" alt="" class="front-face">
+            <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
         <div class="memory-card">
-            <img src="./img/cover-img.png" alt="" class="front-face">
-            <img src="./img/kitty5.png" alt="" class="back-face">
+            <img src="./img/kitty5.png" alt="" class="front-face">
+            <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
         <div class="memory-card">
-            <img src="./img/cover-img.png" alt="" class="front-face">
-            <img src="./img/kitty6.png" alt="" class="back-face">
+            <img src="./img/kitty6.png" alt="" class="front-face">
+            <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
         <div class="memory-card">
-            <img src="./img/cover-img.png" alt="" class="front-face">
-            <img src="./img/kitty6.png" alt="" class="back-face">
+            <img src="./img/kitty6.png" alt="" class="front-face">
+            <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
     </section>
     <!-- Script Link-->
