added store card and match card functionality

--- a/index.html
+++ b/index.html
@@ -9,56 +9,56 @@
 </head>
 <body>
     <section class="memory-game">
-        <div class="memory-card">
+        <div class="memory-card" data-framework="cat1">
             <img src="./img/kitty1.png" alt="" class="front-face">
             <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="cat1">
             <img src="./img/kitty1.png" alt="" class="front-face">
             <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="cat2">
             <img src="./img/kitty2.png" alt="" class="front-face">
             <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="cat2">
             <img src="./img/kitty2.png" alt="" class="front-face">
             <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="cat3">
             <img src="./img/kitty3.png" alt="" class="front-face">
             <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="cat3">
             <img src="./img/kitty3.png" alt="" class="front-face">
             <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="cat4">
             <img src="./img/kitty4.png" alt="" class="front-face">
             <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="cat4">
             <img src="./img/kitty4.png" alt="" class="front-face">
             <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="cat5">
             <img src="./img/kitty5.png" alt="" class="front-face">
             <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="cat5">
             <img src="./img/kitty5.png" alt="" class="front-face">
             <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="cat6">
             <img src="./img/kitty6.png" alt="" class="front-face">
             <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="cat6">
             <img src="./img/kitty6.png" alt="" class="front-face">
             <img src="./img/cover-img.png" alt="" class="back-face">
         </div>
     </section>
-    <!-- Script Link-->
-    <script src="./script.js"></script>
 </body>
+<!-- Script JS Link-->
+    <script src="./script.js"></script>
 </html>
